# PyBar

./: .gitignore  README.md  progressbar.py  pyproject.toml  setup.py
PyBar/: progressbar.py
PyBar.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
